--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-homework ^^^17
+<!DOCTYPE html>
+<html>
+    <head>
+        <title></title>
+    </head>
+    <body>
+        
+    </body>
+</html>
