--- a/index.html
+++ b/index.html
@@ -1,9 +1,31 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
+    <meta charset="utf-8">
+        <title>Howard's Portfolio</title>
+        <link rel="stylesheet" type="text/css" href="css/style.css"/>
     </head>
     <body>
-        
+        <section>
+        <!--navgiation-----------------> 
+            <nav>
+            <!--logo-->
+            <a href="#" class="logo"> HJ Designs</a>
+            <!--menu-->
+            <ul>
+            <li><a href="#">Home</a> </li>
+            <li><a href="#">About Me</a> </li>
+            <li><a href="#">Resume</a> </li>
+            <li><a href="#">Projects</a> </li>
+
+
+
+
+            </ul>
+                
+
+            </nav>
+        </section>
+
     </body>
 </html>
