--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <a href="#" class="logo"> HJ Designs</a>
             <!--menu-->
             <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="#" class="active">Home</a></li>
             <li><a href="#">About Me</a></li>
             <li><a href="#">Resume</a></li>
             <li><a href="#">Projects</a></li>
@@ -22,9 +22,16 @@
 
 
             </ul>
-                
-
             </nav>
+            <!--text------------------------------>
+                <div class="text-container">
+                <p>MEET HOWARD</p>
+                <p>Hello,There!</p>
+                <p>I'm a UX/UI designer with a marked propensity towards human centered design.</p>
+                <button class="down-cv"
+
+                </div>
+
         </section>
 
     </body>
