--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
             </nav>
             <!--text------------------------------>
                 <div class="text-container">
-                <p>MEET HOWARD</p>
-                <p>Hello,There!</p>
+                <p>Hello, There!</p>
+                <p>Meet Howard</p>
                 <p>I'm a UX/UI designer with a marked propensity towards human centered design.</p>
-                <button class="down-cv"
-
+                <button class="down-cv">Download CV</button>
                 </div>
+
 
         </section>
 
