--- a/index.html
+++ b/index.html
@@ -27,9 +27,12 @@
                 <div class="text-container">
                 <p>Hello, There!</p>
                 <p>Meet Howard</p>
-                <p>I'm a UX/UI designer with a marked propensity towards human centered design.</p>
+                <p>I'm a UX/UI designer with a 
+                    marked propensity towards human centered design.</p>
                 <button class="down-cv">Download CV</button>
                 </div>
+            <!--mode------------------------------>
+                <img src="images/unnamed.jpg" class="model" alt="model">
 
 
         </section>
