--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@
                 <button class="down-cv">Download CV</button>
                 </div>
             <!--mode------------------------------>
-                <img src="images/unnamed.jpg" class="model" alt="model">
+                <img src="images/wireframe.jpg" class="model" alt="model">
 
 
         </section>
-
-    </body>
+        <!--about-Section------------------------->
+        <div class="about-container"></div>
+</body>
 </html>
