init-commit_SAVED

--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
                 <div class="text-container">
                 <p>Hello, There!</p>
                 <p>Meet Howard</p>
-                <p>I'm a UX/UI designer with a 
-                    marked propensity towards human centered design.</p>
+                <p>I'm a UX/UI designer with a marked propensity towards human centered design.</p>
                 <button class="down-cv">Download CV</button>
                 </div>
             <!--mode------------------------------>
@@ -37,6 +36,62 @@
 
         </section>
         <!--about-Section------------------------->
-        <div class="about-container"></div>
+        <div class="about-container">
+         <!--img-------------------->
+            <img src="images/About Me-Profile Picture.png">
+
+         <!--about-text------------------->
+            <div class="about-text">
+            <p>About Me</p>
+            <p>Howard Jung</p>
+            <p>UX/UI Designer</p>
+            <p>I’m Howard Jung, a UX/UI designer with agile experience in informative technologies.</p>
+            <p>I’m passionate about creating digital experiences with an impact on user lives.</p>
+            <p>Working closely with designers and product managers for product designs and usability testing, I found myself fascinated by planning numerous user flows, 
+                and unexpected passion brought me to pursue a new career as a UX/UI designer. </p>
+        <!--button------------------->
+        <button>Download CV</button>
+
+        </div>
+
+    </div>
+    <!--Services------------------------------------------->
+    <div class="Services">
+    <!--text----------->
+    <div class="services-text">
+        <p>Services</p>
+        <p>What I can do for you?</p>
+        <p>Conduct product research to determine user behavior,goals,motivation, and needs.</p>
+        <p>Follow and maintain design guidelines for consistent implementation of visual language, themes, CSS style, 
+            component structures based on client standards.</p>
+    </div>
+        <!--box--------------------->
+    <div class="box-container">
+     <!--1----------------->
+        <div class="box-1">
+          <span>1</span>  
+          <p class="heading">User Research</p>
+          <p class="details">Worked with design team members to define research goals and prioritize research opportunities.</p>
+          <button>Read More</button>
+        </div>
+    <!--2------------------------->
+        <div class="box-2">
+            <span>2</span>  
+          <p class="heading">Prototyping</p>
+          <p class="details">Worked with design team members to define research goals and prioritize research opportunities.</p>
+          <button>Read More</button>
+        </div>
+    <!--3--------------------------->
+        <div class="box-3">
+            <span>3</span>  
+          <p class="heading">Basic HTML/ CSS</p>
+          <p class="details">Worked with design team members to define research goals and prioritize research opportunities.</p>
+          <button>Read More</button>
+        </div>
+        
+    </div>
+    </div>
+
+
 </body>
 </html>
