init-commit-saved

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="box-2">
             <span>2</span>  
           <p class="heading">Prototyping</p>
-          <p class="details">Worked with design team members to define research goals and prioritize research opportunities.</p>
+          <p class="details">Prototyping Description.</p>
           <button>Read More</button>
         </div>
     <!--3--------------------------->
