--- a/index.html
+++ b/index.html
@@ -97,8 +97,9 @@
 
     <!--footer------------------------->
         <footer>
-            <p>Get in touch</p>
-            <p>Email</p>
+            <div class="footer">
+            <p>Get in touch!</p>
+            <p>Email Hjung93@gmail.com</p>
     <!--social--------------->
             <div class="social-icons">
                 
@@ -108,6 +109,7 @@
                 <a href="#"></a>
 
             </div>
+        </div>
             <!--copyright-->
             <p>Copyright by Howard Jung Designs</p>
         </footer>
