commit_2nd iteration-

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ crossorigin="anonymous"></script>
     <div class="services-text">
         <p>Services</p>
         <p>What I can do for you?</p>
-        <p>Conduct product research to determine user behavior,goals,motivation, and needs.</p>
+        <p>Conduct product research to determine user behavior, goals, motivation, and needs.</p>
         <p>Follow and maintain design guidelines for consistent implementation of visual language, themes, CSS style, 
             component structures based on client standards.</p>
     </div>
@@ -89,7 +89,7 @@ crossorigin="anonymous"></script>
           <p class="details">Worked with design team members to define research goals and prioritize research opportunities.</p>
           <button>Read More</button>
         </div>
-        
+
     </div>
     </div>
     <!--contact me----------------------------->
@@ -114,7 +114,7 @@ crossorigin="anonymous"></script>
             </div>
         </div>
             <!--copyright-->
-            <p class="copyright">Copyright by Howard Jung Designs</p>
+            <p class="copyright">Copyright 2020 by Howard Jung Designs</p>
         </footer>
         <!--attached social bar---->
         <div class="a-social-b">
