--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ crossorigin="anonymous"></script>
     <!--contact me----------------------------->
         <div class="contact-me">
          <p>I'd love to share my work with you and answer any questions you may have. </p> 
-         <button>Contact Me</button>  
+         <button>Latest Projects</button>  
         </div>
 
     <!--footer------------------------->
